--- a/.config
+++ b/.config
@@ -2,7 +2,7 @@
 CONFIG_TARGET_ipq40xx=y
 CONFIG_TARGET_ipq40xx_generic=y
 CONFIG_TARGET_ipq40xx_generic_DEVICE_p2w_r619ac-128m=y
-CONFIG_LINUX_5_4=y
+#CONFIG_LINUX_5_4=y
 
 # 文件系统镜像等支持:
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
