--- a/.config
+++ b/.config
@@ -2,7 +2,7 @@
 CONFIG_TARGET_ipq40xx=y
 CONFIG_TARGET_ipq40xx_generic=y
 CONFIG_TARGET_ipq40xx_generic_DEVICE_p2w_r619ac-128m=y
-CONFIG_LINUX_5_4=y
+#CONFIG_LINUX_5_4=y
 
 # 文件系统镜像等支持:
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
@@ -52,12 +52,12 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
 CONFIG_PACKAGE_luci-app-syncdial=y
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-vsftpd=y
-#CONFIG_PACKAGE_luci-app-vssr=y
-#CONFIG_PACKAGE_luci-app-vssr_INCLUDE_V2ray_plugin=y
-#CONFIG_PACKAGE_luci-app-vssr_INCLUDE_V2ray=y
-#CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan=y
-#CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Kcptun=y
-#CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Server=y
+CONFIG_PACKAGE_luci-app-vssr=y
+CONFIG_PACKAGE_luci-app-vssr_INCLUDE_V2ray_plugin=y
+CONFIG_PACKAGE_luci-app-vssr_INCLUDE_V2ray=y
+CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan=y
+CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Kcptun=y
+CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Server=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-unblockmusic=y
 CONFIG_PACKAGE_luci-app-upnp=y
